--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Ewert Machine Learning Group
+email: alexander.adamlaurence@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Ewert Machine Learning is an open study group by Machine Learning students at Ewert House, University of Oxford. 
+  We organise weekly discussions on Machine Learning & Applied Mathematics. All are welcome.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://EwertML.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: EwertML
+github_username:  EwertML
 
 # Build settings
 markdown: kramdown
