--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Ewert Machine Learning
 email: ewerthouse.ml@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ewert Machine Learning is an open study group by Machine Learning students at Ewert House, University of Oxford. 
-  We organise weekly discussions on Machine Learning & Applied Mathematics. All are welcome.
+  We organise weekly discussions on Machine Learning & Applied Mathematics. All are welcome!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://EwertML.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: EwertML
