--- a/_config.yml
+++ b/_config.yml
@@ -2,41 +2,41 @@
 #
 # This config file is meant for settings that affect your whole blog, values
 # which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
+# yourself editing these this file very often, consider using Jekyll's data files
 # feature for the data you need to update frequently.
 #
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Ewert Machine Learning
-email: ewerthouse.ml@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Ewert Machine Learning is an open study group by Machine Learning students at Ewert House, University of Oxford. 
-  We organise weekly discussions on Machine Learning & Applied Mathematics. All are welcome!
+title: AI Twitter Conference
+email: alexander.adamlaurence@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Artificial Intelligence Twitter Conference is a free and open virtual conference hosted entirely on Twitter!
+  We will be opening abstract submissions soon, and shortly after will publish our timeslots for presenters. The cost
+  to take part in this conference is and always will be free. We believe in the public duty of communicating science without breaking the bank.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://EwertML.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: EwertML
-github_username:  EwertML
+url: "aitwitterconference.github.io" # the base hostname & protocol for your site
+
+# Social
+githubUsername:
+twitterUsername:
+dribbbleUsername:
+codepenUsername:
 
 # Build settings
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+themeColor: purple #green, blue, orange, purple, grey
+fixedNav: 'true' # true or false
+
+permalink: /:year/:month/:title
+markdown: kramdown
+include: [_pages]
+exclude: [_site, CHANGELOG.md, LICENSE, README.md]
+sass:
+  style: compressed
