--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Ewert Machine Learning is an open study group by Machine Learning students at Ewert House, University of Oxford. 
   We organise weekly discussions on Machine Learning & Applied Mathematics. All are welcome!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://EwertML.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://EwertML.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: EwertML
 github_username:  EwertML
 
